--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
         <h1>the Sums</h1>
         <div id="map">
             <img src="room.png">
+            <img id="sofa" src="sofa.png">
             <img id="player" src="player.png">
         </div>
+        <button onclick="javascript:buy_sofa()" id="buy_sofa">
+            Buy Sofa
+        </button>
     </body>
 </html>
