--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <img src="room.png">
             <img id="sofa" src="sofa.png">
             <img id="player" src="player.png">
+            <img id="flower" src="flower.png">
         </div>
-        <button onclick="javascript:buy_sofa()" id="buy_sofa">
-            Buy Sofa
-        </button>
+        <button onclick="javascript:buy_sofa()" id="buy_sofa">Buy Sofa</button>
+        <button onclick="javascript:buy('flower')" id="buy_flower">Buy Flower</button>
     </body>
 </html>
