--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
         <div id="map">
             <img src="room.png">
             <img id="sofa" src="sofa.png">
+            <img id="bookcase" src="bookcase.png">
             <img id="player" src="player.png">
             <img id="flower" src="flower.png">
         </div>
         <button onclick="javascript:buy_sofa()" id="buy_sofa">Buy Sofa</button>
         <button onclick="javascript:buy('flower')" id="buy_flower">Buy Flower</button>
+        <button onclick="javascript:buy('bookcase')" id="buy_bookcase">Buy Bookcase</button>
     </body>
 </html>
